[metadata]
name = plover_vi
version = 0.2.1
author = user202729
description = Vietnamese system for Plover
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	Operating System :: OS Independent
	Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
	plover_python_dictionary>=1.0.0
	plover_stroke>=0.4.0
	#importlib_resources>=5.1.2
packages =
	plover_vi

[options.entry_points]
plover.system =
	Vietnamese = plover_vi
